fix: C03 embedding batch 불변성 보강